--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,4 +1,5 @@
 #home {
+    background-color: initial;
     color: white;
     position: relative;
 
